--- a/index.html
+++ b/index.html
@@ -2,53 +2,72 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="styles/stylesheets.css">
 </head>
 
 <body>
   <nav class="nav">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-    <button type="button" class="btn nav-btn">
-      Notifications <span class="badge bg-secondary">4</span>
-    </button>
+    <div class="logo">
+      <!-- <img src="images/cute anima.jpeg" alt="logo"> -->
+    </div>
+    <div class="navlinks">
+      <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">link</a>
+    </div>
+
+    <div class="button-container">
+      <button type="button" class="btn nav-btn">
+        Download <span class="badge bg-secondary">4</span>
+      </button>
+    </div>
   </nav>
 
-  <h1>h1. Heading</h1>
-  <h2>h2. Heading</h2>
-  <h3>h3. Heading</h3>
-  <h4>h4. Heading</h4>
-  <h5>h5. Heading</h5>
-  <h6>h6. Heading</h6>
+  <div class="main-body-container">
+    <div class="main-body-container-content">
+      <div class="main-body-container-headings">
+        <h1>h1. Heading</h1>
+        <!-- <h2>h2. Heading</h2>
+        <h3>h3. Heading</h3>
+        <h4>h4. Heading</h4>
+        <h5>h5. Heading</h5>
+        <h6>h6. Heading</h6> -->
+      </div>
+    
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="content-buttons">
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button class="btn btn-primary" type="submit">Button</button>
+        <input class="btn btn-primary" type="button" value="Input">
+        <input class="btn btn-primary" type="submit" value="Submit">
+        <input class="btn btn-primary" type="reset" value="Reset">
+        <a class="btn btn-link" href="#" role="button">Link</a>
+      </div>
+    </div>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  <button type="button" class="btn btn-primary">Primary</button>
-  <a class="btn btn-link" href="#" role="button">Link</a>
-  <button class="btn btn-primary" type="submit">Button</button>
-  <input class="btn btn-primary" type="button" value="Input">
-  <input class="btn btn-primary" type="submit" value="Submit">
-  <input class="btn btn-primary" type="reset" value="Reset">
-
-  <div class="card" style="width: 18rem;">
-    <img
-      src="https://assets-global.website-files.com/5dcc7f8c449e597ed83356b8/5dcc8a5e5473766654e080bb_5d93d0a059ce656959dab196_logo-full-black-2000-p-500.png"
-      class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="btn btn-link">Go somewhere</a>
+    <div class="main-body-container-card" style="width: 18rem;">
+      <div class="card">
+        <img
+          src="https://assets-global.website-files.com/5dcc7f8c449e597ed83356b8/5dcc8a5e5473766654e080bb_5d93d0a059ce656959dab196_logo-full-black-2000-p-500.png"
+          class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-link">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="alert alert-primary" role="alert">
+      A simple primary alert—check it out!
     </div>
   </div>
 
-  <div class="alert alert-primary" role="alert">
-    A simple primary alert—check it out!
-  </div>
 
   <form class="row g-3">
     <div class="col-md-6">
